# PaymentMicroservice

./: .env  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: github-actions-deploy-linter.yml
migrations/: env.py
src/payment/: depends.py  models.py  repository.py  router.py  schemas.py  service.py
src/settings/: db.py  depends.py  exceptions.py  repository.py  service.py  settings.py
