[tool.poetry]
name = "payment microservice"
version = "0.1"
description = ""
authors = ["LedxDeliveryFlopp <korstim18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.0"}
pydantic-settings = "^2.2.1"
email-validator = "^2.1.1"
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
ruff = "^0.3.2"
yookassa = "^3.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = ["migrations", "usr", "venv", "tmp", "var", "migrations"]
